# advent24

./: pyproject.toml
notebooks/: puz_1.ipynb  puz_2.ipynb  puz_3.ipynb  puz_4.ipynb  puz_5.ipynb  puz_6.ipynb  puz_7.ipynb
puzles/: dummy.py
