[tool.poetry]
name = "advent24"
version = "0.1.0"
description = ""
authors = ["Maarten"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
sklearn = "^0.0.post12"
plotly = "^5.24.1"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
