[tool.poetry]
name = "advent24"
version = "0.1.0"
description = ""
authors = ["Maarten"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
plotly = "^5.24.1"
seaborn = "^0.13.2"
ruff = "^0.8.1"
black = {extras = ["jupyter"], version = "^24.10.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
